k8s/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
  labels:
    vnext-app: hello-world
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      imagePullSecrets:
        - name: dk.example.com
      containers:
        - name: hello-world
          image: dk.example.com/hello-world:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
