k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: hello-world
